--- a/bengen_4%.ipynb
+++ b/bengen_4%.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "markdown",
    "id": "ca3f462e",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "source": [
     "# ARP Lab\n",
     "## A Retirement Planning Laboratory"
@@ -61,9 +59,7 @@
   {
    "cell_type": "markdown",
    "id": "4f1fd7ca",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "source": [
     "### Just some Python module bookkeeping\n",
     "The following commands are bookkeeping calls that load the required module and set the program to display verbose informational messages as it runs. It also makes sure that all graphs are properly displayed within the jupyter interface.\n",
@@ -91,9 +87,7 @@
   {
    "cell_type": "markdown",
    "id": "d2d87b7e",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "source": [
     "## Initializing the realization\n",
     "In order to be able to generate a realization of the future, one must start with providing the year of birth of each spouse(s) and their expected lifespan(s).\n",
@@ -171,9 +165,7 @@
   {
    "cell_type": "markdown",
    "id": "429aafe1-3661-4708-b56c-c256c025c9ab",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "source": [
     "## There must be a plan for savings\n",
     "The most manageable part of retirement planning is the control one has over work income, contributions to savings accounts, Roth conversions, and other big spending items in the near- and mid-term future.\n",
@@ -222,9 +214,7 @@
   {
    "cell_type": "markdown",
    "id": "6ea1d7ff",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "source": [
     "## What are the current and future assets allocations?\n",
     "Each savings account can invest in 4 major classes of assets:\n",
@@ -269,9 +259,7 @@
   {
    "cell_type": "markdown",
    "id": "04d8f918-6f14-48a5-bdbc-13a969b3850b",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "source": [
     "## What about anticipated fixed income?\n",
     "Pension and social security are fixed income. Model here assumes that pension income is not inflation adjusted while social security benefits are (but ARP Lab can easily be modified to account for inflation-adjusted pensions). Numbers to be provided are the predicted amount for each spouse and the age of the commencement of benefits.\n",
@@ -305,9 +293,7 @@
   {
    "cell_type": "markdown",
    "id": "0f6b68e8-41a0-46ec-baa7-b6afc3d28ad8",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "source": [
     "## How much net income is desirable at retirement?\n",
     "For determining the desirable annual net income in retirement, certified planners will strongly suggest that you've must have already done a cash flow analysis on your yearly spending. After this exercise, you should have a good idea of how much you'll need in retirement. Another approach is to experiment with multiple spending scenarios and see what your current and future savings can sustain under different market conditions. As one nears retirement, both approaches will need to meet at one point.\n",
@@ -359,9 +345,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ec9f7c76",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "plan.setSpousalSplit(1.)"
@@ -370,9 +354,7 @@
   {
    "cell_type": "markdown",
    "id": "5c1b3bfa-544b-4960-8f21-564e5dc6533c",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "source": [
     "## Specify rates of return and inflation rate\n",
     "Rates of return for each class of assets can be specified, including the rate of inflation.\n",
@@ -459,9 +441,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "73defc19-8df4-48cc-b27e-4320a49fa07f",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "_ = arp.showRateDistributions(1966, 1996)"
@@ -651,9 +631,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2e305502",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "plan.showGrossIncome('Sam 1966');"
@@ -672,9 +650,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "81cec974",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "plan.showRates('Sam 1966');"
@@ -739,9 +715,7 @@
   {
    "cell_type": "markdown",
    "id": "0c722518",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "source": [
     "### Historical comparisons\n",
     "The `runHistorical()` function runs multiple scenarios each going through a historical sequence of rates starting at a given year. It simulates a situation in which this year's rates would be those which happened. This scenario simulates future rates based on a past sequence. As such, the next simulation year would take the rates which happened in 1961 and so on.\n",
@@ -838,9 +812,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d935f374-ccae-4deb-a1d7-e434cdef3917",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "plan.showNetIncome('original')\n",
@@ -884,14 +856,6 @@
     "\n",
     "Enjoy!\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "065fd94a-298a-49cf-bac7-cbf075e7ca75",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -909,8 +873,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
