--- a/mary+john.ipynb
+++ b/mary+john.ipynb
@@ -53,9 +53,7 @@
   {
    "cell_type": "markdown",
    "id": "e4a95968-75c2-440b-a954-af520dfb8f27",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "source": [
     "### Just some Python module bookkeeping\n",
     "The following commands are bookkeeping calls that load the required module and set the program to display verbose informational messages as it runs. It also makes sure that all graphs are properly displayed within the jupyter interface.\n",
@@ -83,9 +81,7 @@
   {
    "cell_type": "markdown",
    "id": "ada1f958-f2ae-4836-bd64-483dcedbe528",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "source": [
     "## Initializing the realization\n",
     "\n",
@@ -105,9 +101,7 @@
   {
    "cell_type": "markdown",
    "id": "b5bd2ada-e63c-47e2-9075-6365f5b4e2a2",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "source": [
     "## Specify account balances and spousal beneficiaries\n"
    ]
@@ -144,9 +138,7 @@
   {
    "cell_type": "markdown",
    "id": "4032ddc5-9647-4e55-af7e-2d484f030c73",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "source": [
     "The couple has a few Roth conversions planned and a few more years to work. Open the Excel file to see the details. John is also planning a few Roth conversions."
    ]
@@ -172,9 +164,7 @@
   {
    "cell_type": "markdown",
    "id": "6ab893a2-d5b3-4a11-9b5d-4d9237aecc8f",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "source": [
     "Mary and John have no pension and average social security benefits."
    ]
@@ -183,9 +173,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8c6e5ac9",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "plan1.setPension([0, 0], [65, 65])\n",
@@ -195,9 +183,7 @@
   {
    "cell_type": "markdown",
    "id": "7503f795-923c-4468-af49-ca24792ab025",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "source": [
     "## How much net annual income is desirable at retirement?"
    ]
@@ -205,9 +191,7 @@
   {
    "cell_type": "markdown",
    "id": "3b04bede-5b8a-44a9-a400-b7109c58441e",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "source": [
     "Mary and John desire a net annual income of \\\\$80k."
    ]
@@ -242,9 +226,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ec9f7c76",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "plan1.setSpousalSplit('auto')"
@@ -253,9 +235,7 @@
   {
    "cell_type": "markdown",
    "id": "a9ad4b1a-14cb-4487-8efa-d945d167282e",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "source": [
     "## Specify rates of return and inflation rate"
    ]
@@ -272,9 +252,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b53ff01e",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "plan1.setRates('historical', 1969)"
@@ -283,9 +261,7 @@
   {
    "cell_type": "markdown",
    "id": "6ea1d7ff",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "source": [
     "## What are current and future assets allocations?"
    ]
@@ -481,8 +457,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
