--- a/roth.ipynb
+++ b/roth.ipynb
@@ -40,9 +40,7 @@
   {
    "cell_type": "markdown",
    "id": "4f1fd7ca",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "source": [
     "### Loading the modules\n",
     "The following commands load the required module and set the program to display informational messages as it runs. It also makes sure that all graphs are properly displayed within the jupyter interface."
@@ -256,9 +254,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "36cac062-cfd1-4daa-84f5-9362258cf97d",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "plan1.setRates('historical', 1969)"
@@ -296,9 +292,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a0a5dd75-704b-487a-8f9b-29d78c4f3883",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%time\n",
@@ -339,9 +333,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "84066c83-9d38-460e-a2a3-8652057f1b10",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "plan1.showSources('base')\n",
@@ -417,8 +409,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "pygments_lexer": "ipython3"
   },
   "toc-autonumbering": false,
   "toc-showmarkdowntxt": false
