--- a/jack+jill.ipynb
+++ b/jack+jill.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "markdown",
    "id": "ca3f462e",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "source": [
     "# ARP Lab\n",
     "## A Retirement Planning Laboratory"
@@ -66,9 +64,7 @@
   {
    "cell_type": "markdown",
    "id": "4f1fd7ca",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "source": [
     "### Just some Python module bookkeeping\n",
     "The following commands are bookkeeping calls that load the required module and set the program to display verbose informational messages as it runs. It also makes sure that all graphs are properly displayed within the jupyter interface.\n",
@@ -174,9 +170,7 @@
   {
    "cell_type": "markdown",
    "id": "de5a5c3f-bfad-4d95-a8ae-1d4f3d37661d",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "source": [
     "## There must be a plan for savings\n",
     "The most manageable part of retirement planning is the control one has over work income, contributions to savings accounts, Roth conversions, and other big spending items in the near- and mid-term future.\n",
@@ -216,9 +210,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7748bcf1",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "plan.readContributions('jack+jill.xlsx')"
@@ -227,9 +219,7 @@
   {
    "cell_type": "markdown",
    "id": "6ea1d7ff",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "source": [
     "## What are the current and future assets allocations?\n",
     "Each savings account can invest in 4 major classes of assets:\n",
@@ -358,9 +348,7 @@
   {
    "cell_type": "markdown",
    "id": "632049cd-dbd4-49da-89bd-06e011c063fc",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "source": [
     "## How much net income is desirable at retirement?\n",
     "For determining the desirable annual net income in retirement, certified planners will strongly suggest that you've must have already done a cash flow analysis on your yearly spending. After this exercise, you should have a good idea of how much you'll need in retirement. Another approach is to experiment with multiple spending scenarios and see what your current and future savings can sustain under different market conditions. As one nears retirement, both approaches will need to meet at one point.\n",
@@ -382,9 +370,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "67a8087a",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "plan.setDesiredIncome(84000, 'smile')"
@@ -414,9 +400,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ec9f7c76",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "plan.setSpousalSplit('auto')"
@@ -425,9 +409,7 @@
   {
    "cell_type": "markdown",
    "id": "11b572a8-2b93-428d-b121-3dc793cedb79",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "source": [
     "## Specify rates of return and inflation rate\n",
     "Rates of return for each class of assets can be specified, including the rate of inflation.\n",
@@ -514,9 +496,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "73defc19-8df4-48cc-b27e-4320a49fa07f",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "_ = arp.showRateDistributions(1928, 2023)"
@@ -690,9 +670,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2e305502",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "plan.showGrossIncome();"
@@ -711,9 +689,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "81cec974",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "plan.showRates();"
@@ -778,9 +754,7 @@
   {
    "cell_type": "markdown",
    "id": "0c722518",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "source": [
     "### Historical comparisons\n",
     "The `runHistorical()` function runs multiple scenarios each going through a historical sequence of rates starting at a given year. It simulates a situation in which this year's rates would be those which happened. This scenario simulates future rates based on a past sequence. As such, the next simulation year would take the rates which happened in 1961 and so on.\n",
@@ -867,9 +841,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d935f374-ccae-4deb-a1d7-e434cdef3917",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "plan.showNetIncome()\n",
@@ -913,14 +885,6 @@
     "\n",
     "Enjoy!\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "065fd94a-298a-49cf-bac7-cbf075e7ca75",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -938,8 +902,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
