Ran pandoc on html

--- a/template.ipynb
+++ b/template.ipynb
@@ -56,9 +56,7 @@
   {
    "cell_type": "markdown",
    "id": "e4a95968-75c2-440b-a954-af520dfb8f27",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "source": [
     "### Just some Python module bookkeeping\n",
     "The following commands are bookkeeping calls that load the required module and set the program to display verbose informational messages as it runs. It also makes sure that all graphs are properly displayed within the jupyter interface.\n",
@@ -86,9 +84,7 @@
   {
    "cell_type": "markdown",
    "id": "ada1f958-f2ae-4836-bd64-483dcedbe528",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "source": [
     "## Initializing the realization\n",
     "In order to be able to generate a realization of the future, one must start with providing the year of birth of each spouse(s) and their expected lifespan(s).\n",
@@ -166,9 +162,7 @@
   {
    "cell_type": "markdown",
    "id": "784a59d4-f8a9-46d9-a9ed-188fddb8e1d7",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "source": [
     "## There must be a plan for savings\n",
     "The most manageable part of retirement planning is the control one has over work income, contributions to savings accounts, Roth conversions, and other big spending items in the near- and mid-term future.\n",
@@ -217,9 +211,7 @@
   {
    "cell_type": "markdown",
    "id": "6ea1d7ff",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "source": [
     "## What are current and future assets allocations?\n",
     "Each savings account can invest in 4 major classes of assets:\n",
@@ -343,9 +335,7 @@
   {
    "cell_type": "markdown",
    "id": "e31d7491-4206-40df-8d40-bddd5219003c",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "source": [
     "## How much net income is desirable at retirement?\n",
     "For determining the desirable annual net income in retirement, certified planners will strongly suggest that you've must have already done a cash flow analysis on your yearly spending. After this exercise, you should have a good idea of how much you'll need in retirement. Another approach is to experiment with multiple spending scenarios and see what your current and future savings can sustain under different market conditions. As one nears retirement, both approaches will need to meet at one point.\n",
@@ -406,9 +396,7 @@
   {
    "cell_type": "markdown",
    "id": "f44324b3-60ea-419b-9366-43de785076dc",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "source": [
     "## Specify rates of return and inflation rate\n",
     "Rates of return for each class of assets can be specified, including the rate of inflation.\n",
@@ -475,9 +463,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b53ff01e",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "plan.setRates('historical', 1969)"
@@ -497,9 +483,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1de50ee3-f6c4-4e8d-b37c-26824ad8ef1f",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "_ = arp.showRateDistributions(1928, 2023)"
@@ -600,9 +584,7 @@
   {
    "cell_type": "markdown",
    "id": "8ae26e4d",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "source": [
     "To get more information about accounts at the last year of the realization, one can use\n",
     "\n",
@@ -675,9 +657,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2e305502",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "plan.showGrossIncome();"
@@ -696,9 +676,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "81cec974",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "plan.showRates();"
@@ -761,9 +739,7 @@
   {
    "cell_type": "markdown",
    "id": "0c722518",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "source": [
     "### Historical comparisons\n",
     "The `runHistorical()` function runs multiple scenarios each going through a historical sequence of rates starting at a given year. It simulates a situation in which this year's rate would be those which happened, say in 1960, and the next in 1961, and so on. The next simulation starts a year later in 1961 and the following years will also be shifted by one year.\n",
@@ -828,14 +804,6 @@
     "\n",
     "Enjoy!\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ae012c9b-ab4c-466d-a287-c34546b832f5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -853,8 +821,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
