Minor typos in text.

--- a/roth.ipynb
+++ b/roth.ipynb
@@ -247,7 +247,7 @@
    "id": "3c573955-77f4-46cc-bc84-dd67e6914cd5",
    "metadata": {},
    "source": [
-    "We want to find the (near) best Roth conversions that can maximize the wealth at the end of life. Note that this is not an exercise trying to minimize the amount of tax paid. More taxes could be paid, if this leads to more wealth for the heirs conditional to satisfying a desired net income during the life span of Clyde and Bonnie. Is there a preferable sequence of conversions when markets are fluctuating? To answer this question, we will use the sequence of historical rates that happened from 1969 and the years after. Are there signs in the market that can indicate preferable times to make a Roth conversion? Let's run this case. We will use the `%%time` option of Jupyter to report the computer time to run the case. We will assume a tax rate of 25% to be applied to the tax-deferred portion left in the estate after Clyde and Bonnie have passed. This is done to be able to make meaningful comparisons between life-end portfolios that have a mix of tax-deferred and tax-free assets."
+    "We want to find the (near) best Roth conversions that can maximize the wealth at the end of life. Note that this is not an exercise trying to minimize the amount of tax paid. More taxes could be paid, if this leads to more wealth for the heirs conditional to satisfying a desired net income during the life span of Clyde and Bonnie. Is there a preferable sequence of conversions when markets are fluctuating? To answer this question, we will use the sequence of historical rates that happened from 1969 and the years after. Are there signs in the market that can indicate preferable times to make a Roth conversion? Let's run this case. We will use the `%%time` option of Jupyter to report the computer time to run the case. We will assume a tax rate of 25% to be applied to the tax-deferred portion left in the estate after Clyde and Bonnie have passed. This is done to be able to make meaningful comparisons between end-of-life portfolios that have a mix of tax-deferred and tax-free assets."
    ]
   },
   {
@@ -285,7 +285,7 @@
    "id": "6207f4af-9aae-4e42-a5ea-beb27388379a",
    "metadata": {},
    "source": [
-    "Given the historical sequence of rates, including inflation, the final wealth in today's \\\\$ is about \\\\$4.2M. Now we try to find a better scenario that would include the (near) best sequence of Roth conversions.  The first and second arguments specify the plan to optimize and the tax rate on the tax-deferred portion of the estate. The minimization algorithm can also be given a Roth conversion amount to start considering down to the smallest adjustment to make. These values are specified using the `startConv` and `minConv` values. "
+    "Given the historical sequence of rates, including inflation, the final wealth in today's \\\\$ is about \\\\$4.3M. Now we try to find a better scenario that would include the (near) best sequence of Roth conversions.  The first and second arguments specify the plan to optimize and the tax rate on the tax-deferred portion of the estate. The minimization algorithm can also be given a Roth conversion amount to start considering down to the smallest adjustment to make. These values are specified using the `startConv` and `minConv` values. "
    ]
   },
   {
@@ -296,7 +296,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "plan2, conversions = arp.optimizeRoth(plan1, 25, minConv=250, startConv=128000)\n",
+    "plan2, conversions = arp.optimizeRoth(plan1, 25, minConv=50, startConv=64000)\n",
     "print(conversions)"
    ]
   },
@@ -371,7 +371,7 @@
    "id": "f52b86d6-063d-4503-992e-12f4c46f3e1c",
    "metadata": {},
    "source": [
-    "### Conclusions"
+    "### More questions"
    ]
   },
   {
