--- a/bengen_4%.ipynb
+++ b/bengen_4%.ipynb
@@ -39,7 +39,7 @@
     "\n",
     "It is assumed that you have some familiarity with using a jupyter notebook or jupyterLab, and some basic programming skills in Python. If not, a simple tutorial can guide you to the basic skills needed.\n",
     "\n",
-    "For simulating your own realizations, use the files beginning with *template*. Make a copy and rename them keeping the same extension and give them you own names. Then you'll be able to personalize a case with your own numbers and start experimenting with ARP Lab."
+    "For simulating your own realizations, use the files beginning with *template*. Make a copy and rename them keeping the same extension and give them your own names. Then you'll be able to personalize a case with your own numbers and start experimenting with ARP Lab."
    ]
   },
   {
