--- a/jack+jill.ipynb
+++ b/jack+jill.ipynb
@@ -50,7 +50,7 @@
     "\n",
     "It is assumed that you have some familiarity with using a jupyter notebook or jupyterLab, and some basic programming skills in Python. If not, a simple tutorial can guide you to the basic skills needed.\n",
     "\n",
-    "For simulating your own realizations, use the files beginning with *template*. Make a copy and rename them keeping the same extension and give them you own names. Then you'll be able to personalize a case with your own numbers and start experimenting with ARP Lab."
+    "For simulating your own realizations, use the files beginning with *template*. Make a copy and rename them keeping the same extension and give them your own names. Then you'll be able to personalize a case with your own numbers and start experimenting with ARP Lab."
    ]
   },
   {
@@ -303,10 +303,10 @@
     "# For coordination taking place for each individual separately.\n",
     "# plan.setCoordinatedAR(initial=[[60, 30, 5, 5], [70, 30, 0, 0]], final=[[50, 30, 5, 15], [40, 20, 15, 25]])\n",
     "\n",
-    "# For a single individual, of for coordinating both spousal accounts simultaneously.\n",
+    "# For a single individual, or for coordinating both spousal accounts simultaneously.\n",
     "# plan.setCoordinatedAR(initial=[60, 30, 5, 5], final=[50, 30, 5, 15])\n",
     "\n",
-    "# An interpolation must follow either call for generating the data for all the years of the simulation.\n",
+    "# An interpolation must follow either call for generating the data for all years of the simulation.\n",
     "# plan.interpolateAR('s-curve', center=10, width=6)"
    ]
   },
@@ -322,7 +322,7 @@
     "\n",
     "    plan.setPension([0, 0], [65, 65])\n",
     "    \n",
-    "For social security, one must provide the predicted amount(s) and the starting age(s) at which benefits are anticipated to be received. There are plenty of social security benefit estimators on the web, including the info you can get directly from your own account at the Social Security Administration (ssa.gov). Another interesing calculator can be found at www.opensocialsecurity.com. This calculator allows you to compare different scenarios regarding your commencement age through a sensitivity plot.\n"
+    "For social security, one must provide the predicted amount(s) and the starting age(s) at which benefits are anticipated to be received. There are plenty of social security benefit estimators on the web, including the info you can get directly from your own account at the Social Security Administration (ssa.gov). Another interesting calculator can be found at www.opensocialsecurity.com. This calculator allows you to compare different scenarios regarding your commencement age through a sensitivity plot.\n"
    ]
   },
   {
@@ -353,9 +353,9 @@
     "## How much net income is desirable at retirement?\n",
     "For determining the desirable annual net income in retirement, certified planners will strongly suggest that you've must have already done a cash flow analysis on your yearly spending. After this exercise, you should have a good idea of how much you'll need in retirement. Another approach is to experiment with multiple spending scenarios and see what your current and future savings can sustain under different market conditions. As one nears retirement, both approaches will need to meet at one point.\n",
     "\n",
-    "The desired income defined here is the minimum annual **net** income (i.e., after paying federal income tax) that one would like to have starting at her/his \"retirement age\" (we will provide a loose definition of the term *retirement age* below). This desired income must be adjusted for inflation and can follow an additional adjustment called a *smile* profile. A *smile* profile accounts for the fact that your spending capacity will modulate during retirement as you go from the so-called gogo years to the no-go years. A *flat* profile, on the other hand, will keep the same value, which will only be adjusted for inflation.\n",
+    "The desired income defined here is the minimum annual **net** income (i.e., after paying federal income tax) that one would like to receive starting at her/his \"retirement age\" (we provided a loose definition of the term *retirement age* above). This desired income must be adjusted for inflation and can follow an additional adjustment called a *smile* profile. A *smile* profile accounts for the fact that your spending capacity will modulate during retirement as you go from the so-called gogo years to the no-go years. A *flat* profile, on the other hand, will keep the same value, which will only be adjusted for inflation. More realistically, the income could also be modulated by the performance of assets, reducing withdrawals in market down years. These strategies (first proposed by Guyton and Klinger) will be implemented in ARP Lab shortly. \n",
     "\n",
-    "The target and actual net income values achieved by the realization can be plotted as will see below.\n"
+    "The target and actual net income values achieved through the realization can be plotted as will see below.\n"
    ]
   },
   {
@@ -363,7 +363,7 @@
    "id": "e253e7c4-9767-411a-bc55-e151c6060b80",
    "metadata": {},
    "source": [
-    "Jack and Jill believe that their spending profile will follow a *smile* curve rather than a *flat* line. They also believe that they can be comfortable with \\\\$7k per month, therefore \\\\$84k per year.   Can they afford it?"
+    "Jack and Jill believe that their spending profile will follow a *smile* curve rather than a *flat* line. They also believe that they can be comfortable with \\\\$7k per month, therefore \\\\$84k per year, inflation adjusted.   Can they afford it?"
    ]
   },
   {
@@ -385,7 +385,7 @@
     "It can be desirable for couples to determine how to make distributions from each spousal account.\n",
     "By specifying an *auto* spousal split, the withdrawals from the retirement savings accounts will be made proportional to their respective balances. It can also be specified as a fixed fractional value (e.g., 0.65) in which case 0.65 will be taken from the first account and the other 35% taken from the other (second entry) spouse, at this risk of depleting one account before the other, and running short on income.\n",
     "\n",
-    "All withdrawals use a smart banking approach which favors depleting taxable accounts before tax-deferred, before tax-free. With *auto*, additional checks and bounds are used to better coordinate spousal accounts.\n"
+    "All withdrawals use a smart banking approach which favors depleting taxable accounts before tax-deferred, before tax-free. With *auto*, additional checks and bounds are used to better coordinate spousal accounts and prevent depletion, and therefore failure of the realization.\n"
    ]
   },
   {
@@ -759,7 +759,7 @@
     "### Historical comparisons\n",
     "The `runHistorical()` function runs multiple scenarios each going through a historical sequence of rates starting at a given year. It simulates a situation in which this year's rates would be those which happened. This scenario simulates future rates based on a past sequence. As such, the next simulation year would take the rates which happened in 1961 and so on.\n",
     "\n",
-    "User can select what values to plot at the end of each scenario through the `myplots` keyword. It understands the following words: *net income*, *rates*, *taxable income*, *sources*, *taxes*, *accounts*, and *allocations*."
+    "User can select what values to plot at the end of each scenario through the `myplots` keyword. It understands the following words: *net income*, *rates*, *taxable income*, *sources*, *taxes*, *accounts*, *distributions*, and *allocations*."
    ]
   },
   {
@@ -788,7 +788,7 @@
    "metadata": {},
    "source": [
     "### Monte-Carlo simulations\n",
-    "In a Monte-Carlo simulation, a random number generator is used to create values that meet the statistical criterion of a known distribution. In ARP Lab, one specifies the range of years of historical annual rates data that will be used to characterize the probability distribution of a normal multivariate distribution. Once selected, one can run as many realizations as desired. The more is generally the better, as it will improve the accuracy of the mean value while increasing the possibility of observing rare events. A value of 1,000 is generally more than sufficient. For the sake of demonstration in this notebook, we will use a smaller number of iterations of 500."
+    "In a Monte-Carlo simulation, a random number generator is used to create values that meet the statistical criteria of a known distribution. In ARP Lab, one specifies the range of years of historical annual rates data that will be used to characterize the probability distribution of a normal multivariate distribution. Once selected, one can run as many realizations as desired. The more is generally the better, as it will improve the accuracy of the mean value while increasing the possibility of observing rare events. A value of 1,000 is generally more than sufficient. For the sake of demonstration in this notebook, we will use a smaller number of iterations of 500."
    ]
   },
   {
@@ -807,11 +807,11 @@
    "metadata": {},
    "source": [
     "## One more notch up for modeling\n",
-    "We can also run Roth conversion estate maximization strategies. Using commutativity of multiplication, one can easily demonstrate that there is no point in doing a Roth conversion if the tax rate to be paid on the conversion now is the same as the one to be paid on the distribution later. However, things are much more complex in reality as one has to take RMDs in consideration on top of all other unknown factors that can happen, including changes in the tax code. For this purpose, a simple Monte Carlo Roth optimizer is proposed. The objective function is to maximize the estate amount left at the passing of the last spouse, considering a tax bracket on the taxable portion of the estate, and under the constraint of receiving a desired income. Function will return a new plan, and an array containing the proposed Roth conversions. These conversions are near optimal, and different runs can give slightly different results.\n",
+    "We can also run Roth conversion estate maximization strategies. Using commutativity of multiplication, one can easily demonstrate that there is no point in doing a Roth conversion if the tax rate to be paid on the conversion now is the same as the one to be paid on the distribution later. However, things are much more complex in reality as one has to take RMDs in consideration on top of all other unknown factors that can happen, including changes in the tax code. For this purpose, a simple heuristic Roth optimizer is proposed. The objective function is to maximize the estate amount left at the passing of the last spouse, considering a tax bracket on the taxable portion of the estate, and under the constraint of receiving a desired net income during retirement. Function will return a new `plan` object, and an array containing the proposed Roth conversions. These conversions are near optimal, and different runs can give slightly different results.\n",
     "\n",
     "Not surprisingly, the proposed Roth conversions will make the gross income \"surf\" a tax bracket crossover line, confirming the approach commonly used for heuristically determining good amounts for Roth conversions.  \n",
     "\n",
-    "Here is an example of how it works: "
+    "There is a separate notebook exploring the Roth optimizer in detail. Nevertheless, here is a short example demonstrating how it works: "
    ]
   },
   {
