--- a/mary+john.ipynb
+++ b/mary+john.ipynb
@@ -31,7 +31,7 @@
     "\n",
     "I assume that you have some familiarity with using a jupyter notebook or jupyterLab, and some basic programming skills in Python.\n",
     "\n",
-    "For simulating your own realizations, use (and possibly rename) the files beginning with *template*. Make a copy and rename them keeping the same extension and give them you own names. Then you'll be able to personalize a case with your own numbers and start experimenting with ARP Lab."
+    "For simulating your own realizations, use (and possibly rename) the files beginning with *template*. Make a copy and rename them keeping the same extension and give them your own names. Then you'll be able to personalize a case with your own numbers and start experimenting with ARP Lab."
    ]
   },
   {
