--- a/jack+jill.ipynb
+++ b/jack+jill.ipynb
@@ -297,7 +297,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "502f94e2-eeb2-4c8e-b1ab-d947eef913ba",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# For coordination taking place for each individual separately.\n",
@@ -416,7 +418,11 @@
     "These are important components for  future assumptions.\n",
     "Setting future rates is done with the `setRates()` method from which one can select different\n",
     "sources for determining the rates.\n",
-    "Valid choices are *historical*, *stochastic*, *average*, *fixed*, or *default*.\n",
+    "Valid choices are *historical*, *stochastic*, *average*, *fixed*, *conservative*, or *default*.\n",
+    "\n",
+    "For the *conservative* case, values reported from MorningStar for the next ten years are used. These are rates lower than the last ten years as most analysts are predicting lower rates from the next decade. These values are fixed rates of 5.0% for the S&P 500 and the Corporate bonds markets, 4% for the 10-year Treasury bonds, with an inflation at around 2.5%. Using these conservative rates can be achieved by using the following call:\n",
+    "\n",
+    "    plan.setRates('conservative')\n",
     "\n",
     "For the *historical*, *stochastic*, and *average* options, data from 1928 to the last year are available for experimenting.\n",
     "Ranges chosen smaller than the life horizon of the longest-lived individual will have rate values repeated in cycle. For example,\n",
@@ -885,6 +891,14 @@
     "\n",
     "Enjoy!\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "065fd94a-298a-49cf-bac7-cbf075e7ca75",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -902,7 +916,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
