--- a/template.ipynb
+++ b/template.ipynb
@@ -403,7 +403,11 @@
     "These are important components of future assumptions.\n",
     "Setting future rates is done with the `setRates()` method from which one can select different\n",
     "sources for determining the rates.\n",
-    "Valid entries are *historical*, *stochastic*, *average*, or a list of fixed average values.\n",
+    "Valid entries are *historical*, *stochastic*, *average*, *conservative*, *default*, or *fixed*.\n",
+    "\n",
+    "For the *conservative* case, values reported from MorningStar for the next ten years are used. These are rates lower than the last ten years as most analysts are predicting lower rates from the next decade. These values are fixed rates of 5.0% for the S&P 500 and the Corporate bonds markets, 4% for the 10-year Treasury bonds, with an inflation at around 2.5%. Using these conservative rates can be achieved by using the following call:\n",
+    "\n",
+    "    plan.setRates('conservative')\n",
     "\n",
     "For the *historical*, *stochastic*, and *average* choices, data from 1928 to the last year are available for experimenting.\n",
     "Ranges chosen smaller than the life horizon of the longest-lived individual will have rate values repeated in cycle. For example,\n",
@@ -444,7 +448,7 @@
     "Finally one can also use selected fixed annual rates by providing a list of 4 entries as follows:\n",
     "\n",
     "    myrates = [9.6, 4.0, 3.0, 3.8]\n",
-    "    plan.setRates(myrates)\n",
+    "    plan.setRates('fixed', values=myrates)\n",
     "    \n",
     "This example would use fixed rates of 9.6%, 4.0%, 3.0%, and 3.8% as average annual returns on S&P 500, corporate bonds, Treasury notes, and common assets, respectively, with an average annual inflation rate of 3.8% for the full duration of the time simulation. Remember that the common assets class consists of investments tracking inflation only. Therefore the last index serves both to track the common asset class and to adjust values for inflation.\n",
     "\n",
@@ -804,6 +808,14 @@
     "\n",
     "Enjoy!\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae012c9b-ab4c-466d-a287-c34546b832f5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -821,7 +833,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
