--- a/jack+jill.ipynb
+++ b/jack+jill.ipynb
@@ -297,9 +297,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "502f94e2-eeb2-4c8e-b1ab-d947eef913ba",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# For coordination taking place for each individual separately.\n",
@@ -891,14 +889,6 @@
     "\n",
     "Enjoy!\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "065fd94a-298a-49cf-bac7-cbf075e7ca75",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -916,8 +906,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
