--- a/template.ipynb
+++ b/template.ipynb
@@ -808,14 +808,6 @@
     "\n",
     "Enjoy!\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ae012c9b-ab4c-466d-a287-c34546b832f5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -833,8 +825,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
