--- a/bengen_4%.ipynb
+++ b/bengen_4%.ipynb
@@ -856,14 +856,6 @@
     "\n",
     "Enjoy!\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "065fd94a-298a-49cf-bac7-cbf075e7ca75",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -881,8 +873,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
