Included more details in roth notebook

--- a/roth.ipynb
+++ b/roth.ipynb
@@ -34,7 +34,7 @@
    "id": "a738e9ba-8567-4268-8724-79b112612065",
    "metadata": {},
    "source": [
-    "In this short notebook, we will explore the subtle effects of Roth conversions. We start with a couple having a little over \\\\$2M in assets. As is common, one spouse can significantly more assets than the other. Here, Bonnie enjoyed high wages and generous benefits from her employer, while Clyde had an equally enjoyable but less lucrative career."
+    "In this short notebook, we will explore the subtle effects of Roth conversions. We start with a couple having a little over \\\\$2M in assets. As is common, one spouse can have significantly more assets than the other. Here, Bonnie enjoyed high wages and generous benefits from her employer, while Clyde had an equally enjoyable but less lucrative career."
    ]
   },
   {
@@ -76,7 +76,7 @@
    "id": "0fb31825-da92-45f8-8b36-ff6abf7b1871",
    "metadata": {},
    "source": [
-    "Start with a couple being about 5 years from retirement. Bonnie is born in 64, while Clyde is two years younger."
+    "We start with a couple being about 5 years from retirement. Bonnie is born in 64, while Clyde is two years younger. Their life expectancy is assumed to be a few years longer than average for their age."
    ]
   },
   {
@@ -120,6 +120,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a0ca59f8-f8fa-4432-95f5-106cc97aab92",
+   "metadata": {},
+   "source": [
+    "This file contains anticipated income and contributions to savings accounts over the next few years. No Roth conversions are currenly planned in the file. Have a look at the worksheet in Excel. Very simple."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "7748bcf1",
@@ -142,7 +150,7 @@
    "id": "9a7b4719-6fe4-4f08-9e14-7156d994a3fc",
    "metadata": {},
    "source": [
-    "We will use a fully coordinated assets allocation strategy."
+    "We will use a fully coordinated assets allocation strategy. This means that the overall assets allocation is maintained for the sum of both spouses, but the ratio of each can be biased depending on the balance in savings accounts. This way, the spouse with a larger balance in a tax-free account can carry a larger fraction of stock equities, while still maintaining the requested assets allocation when considering the sum of the accounts of both spouses."
    ]
   },
   {
@@ -176,7 +184,7 @@
    "id": "c5a3f4ff-4911-4774-b509-f764ec66ce52",
    "metadata": {},
    "source": [
-    "Use a \\\\$120k as desired net income with a *smile* profile."
+    "Our couple use \\\\$120k as the desired net income with a *smile* profile."
    ]
   },
   {
@@ -194,7 +202,8 @@
    "id": "43bd9a2a-e2bf-434f-88ac-b0a70dcdd1fd",
    "metadata": {},
    "source": [
-    "## Pension and social security"
+    "## Pension and social security\n",
+    "They have no pension, but will receive a little over average for social security benefits (average social security benefits are about \\\\$22k for men and \\\\$18k for women)."
    ]
   },
   {
@@ -206,14 +215,6 @@
    "source": [
     "plan1.setPension([0, 0], [65, 65])\n",
     "plan1.setSocialSecurity([35000, 27000], [70, 67])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4426eee7-4f35-4b59-8ce3-7caa6a2eb662",
-   "metadata": {},
-   "source": [
-    "This file contains anticipated income and contributions to savings accounts over the next few years. No Roth conversions are currenly planned in the file. Have a look at the worksheet in Excel. Very simple."
    ]
   },
   {
@@ -285,7 +286,7 @@
    "id": "6207f4af-9aae-4e42-a5ea-beb27388379a",
    "metadata": {},
    "source": [
-    "Given the historical sequence of rates, including inflation, the final wealth in today's \\\\$ is about \\\\$4.3M. Now we try to find a better scenario that would include the (near) best sequence of Roth conversions.  The first and second arguments specify the plan to optimize and the tax rate on the tax-deferred portion of the estate. The minimization algorithm can also be given a Roth conversion amount to start considering down to the smallest adjustment to make. These values are specified using the `startConv` and `minConv` values. "
+    "Given the historical sequence of rates, including inflation, the final wealth in today's \\\\$ is about \\\\$4.3M. Now we try to find a better scenario that would include the (near) best sequence of Roth conversions.  The first and second arguments specify the plan to optimize and the tax rate on the tax-deferred portion of the estate. The minimization algorithm must also be given a Roth conversion amount to start considering down to the smallest adjustment to make. These values are specified using the `startConv` and `minConv` values. "
    ]
   },
   {
@@ -305,7 +306,7 @@
    "id": "cca43877-9081-45ae-9948-55cdce7f7a6a",
    "metadata": {},
    "source": [
-    "Assuming a tax rate of 25% on the tax-deferred account for the heirs, Roth conversions could increase the value by close to \\\\$800k (in today's \\\\$). Notice that running the algorithm multiple times will give different results depending on the random sequence used to obtain an optimal solution. These results are typically within +/-5% of one another.\n",
+    "Assuming a tax rate of 25% on the tax-deferred account for the heirs, Roth conversions could increase the value by close to \\\\$800k (in today's \\\\$).\n",
     "\n",
     "We can save all withdrawals and events using the `saveInstance()` function, instructing to overwrite the file if it exists."
    ]
@@ -359,7 +360,7 @@
     "### Brief analysis\n",
     "Note how the Roth conversions are timed with the spikes in rates of return, reinforcing the practice that making Roth conversion during the downturns of the market is an excellent strategy. Here, the Roth conversions are assumed to be done early in the year, before the annual rate of return is applied. As a results, conversions in the same year as when the market recovers is the best strategy. As we do not know when the market will bounce, we do know when the market goes down, and therefore a strategy of converting any time during a market large dip is good.\n",
     "\n",
-    "When tax-deferred assets are large, the RMDs can have a significant tax impact in the middle-to-late years of retirement. Roth conversion smooths out these income peaks by shifting the tax burden earlier in the retirement and avoiding large RMDs later in life. Moreover, coordinated accounts can maintain a balanced portfolio while shifting high-performance (but riskier) assets to a tax-free account, further reducing the tax burden on the remaining assets.\n",
+    "Another contributing factor to this additional wealth is that when tax-deferred assets are large, the RMDs can have a significant tax impact in the middle-to-late years of retirement. Roth conversion smooths out these income peaks by shifting the tax burden earlier in the retirement and avoiding large RMDs later in life. Moreover, coordinated accounts can maintain a balanced portfolio while shifting high-performance (but riskier) assets to a tax-free account, further reducing the tax burden on the remaining assets.\n",
     "\n",
     "When return rates are constant, the proposed Roth conversions will tend to align with a given tax bracket (dashed lines), following common wisdom. The situation here is a combination of both, as it seems advantageous to break the tax bracket line for generating more return in a tax-free account before a swing of market recovery."
    ]
