--- a/jack+jill.ipynb
+++ b/jack+jill.ipynb
@@ -725,7 +725,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.saveInstance('Jack and Jill - 1969', True)"
+    "plan.saveInstance('jack+jill-1969', True)"
    ]
   },
   {
