More info in Roth conversion notebook

--- a/roth.ipynb
+++ b/roth.ipynb
@@ -306,7 +306,7 @@
    "id": "cca43877-9081-45ae-9948-55cdce7f7a6a",
    "metadata": {},
    "source": [
-    "Assuming a tax rate of 25% on the tax-deferred account for the heirs, Roth conversions could increase the value by close to \\\\$800k (in today's \\\\$).\n",
+    "Assuming a tax rate of 25% on the tax-deferred account for the heirs, Roth conversions could increase the value by close to \\\\$800k (in today's \\\\$, or strictly speaking in that case, in 1969 \\\\$, which is the first year of retirement).\n",
     "\n",
     "We can save all withdrawals and events using the `saveInstance()` function, instructing to overwrite the file if it exists."
    ]
@@ -362,7 +362,9 @@
     "\n",
     "Another contributing factor to this additional wealth is that when tax-deferred assets are large, the RMDs can have a significant tax impact in the middle-to-late years of retirement. Roth conversion smooths out these income peaks by shifting the tax burden earlier in the retirement and avoiding large RMDs later in life. Moreover, coordinated accounts can maintain a balanced portfolio while shifting high-performance (but riskier) assets to a tax-free account, further reducing the tax burden on the remaining assets.\n",
     "\n",
-    "When return rates are constant, the proposed Roth conversions will tend to align with a given tax bracket (dashed lines), following common wisdom. The situation here is a combination of both, as it seems advantageous to break the tax bracket line for generating more return in a tax-free account before a swing of market recovery."
+    "When return rates are constant, the proposed Roth conversions will tend to align with a given tax bracket (dashed lines), following common wisdom. The situation here is a combination of both, as it seems advantageous to break the tax bracket line for generating more return in a tax-free account before a swing of market recovery.\n",
+    "\n",
+    "Recall that this simulation is using average annual return rates and not daily rates. This has two consequences. The first one is that a knowledge of daily market values could lead to even more gains. But this is only wishful thinking. Second, this simulation assumes that conversions happen at the beginning of the year. A practical implementation would be to design a guard rail system in which a drop in the market beyond a certain percentage value could trigger a Roth conversion of a certain amount optimized over informed assumptions."
    ]
   },
   {
