Simpified module loading

--- a/bengen_4%.ipynb
+++ b/bengen_4%.ipynb
@@ -75,11 +75,7 @@
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
-    "# import arp\n",
-    "\n",
-    "import importlib\n",
-    "arp = importlib.import_module('arp')\n",
-    "importlib.reload(arp)\n",
+    "import arp\n",
     "\n",
     "arp.setVerbose(True)"
    ]
