--- a/template.ipynb
+++ b/template.ipynb
@@ -72,11 +72,7 @@
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
-    "# import arp\n",
-    "\n",
-    "import importlib\n",
-    "arp = importlib.import_module('arp')\n",
-    "importlib.reload(arp)\n",
+    "import arp\n",
     "\n",
     "arp.setVerbose(True)"
    ]
