Added documentation in code. Used heirs in txRate.

--- a/bengen_4%.ipynb
+++ b/bengen_4%.ipynb
@@ -542,7 +542,7 @@
    "source": [
     "To get more information about accounts at the last year of the realization, one can use\n",
     "\n",
-    "    plan.setDeferredTaxRate(30)\n",
+    "    plan.setHeirsTaxRate(30)\n",
     "    plan.estate()\n",
     "    \n",
     "which returns the value of the assets in today's \\\\$ at the last year of the scenario, assuming (in this case) a 30\\% tax burden on the taxable portion of the estate (read tax-deferred savings accounts). The `estate()` function returns two values: the total post-tax value of all savings account in today's dollars and the cumulative inflation rate between today and the last day of the realization. We can also override the tax-deferred rate value by giving an argument. In the case below, a value of 35% would override the value shown above."
@@ -695,7 +695,7 @@
    "id": "dfe6d2b4-9304-432a-b32c-5053bfdcdea3",
    "metadata": {},
    "source": [
-    "In these simulations, multiple scenarios will be generated and need to be compared. For ranking outcomes, it is instructive to compare the final value of the estate, if any. Given that parts of the assets portfolio are taxable, one has to provide an estimate of the income tax rate to be applied to the taxable portion of the final assets. This is done using the `setDeferredTaxRate()` method, by which an estimated tax rate is applied on the tax-deferred portion of the estate for comparison in the last year of the scenario. The default value is 25%. Note that this rate is the marginal tax rate that will be paid by the heirs, not including possible additional estate taxes."
+    "In these simulations, multiple scenarios will be generated and need to be compared. For ranking outcomes, it is instructive to compare the final value of the estate, if any. Given that parts of the assets portfolio are taxable, one has to provide an estimate of the income tax rate to be applied to the taxable portion of the final assets. This is done using the `setHeirsTaxRate()` method, by which an estimated tax rate is applied on the tax-deferred portion of the estate for comparison in the last year of the scenario. The default value is 25%. Note that this rate is the marginal tax rate that will be paid by the heirs, not including possible additional estate taxes."
    ]
   },
   {
@@ -705,7 +705,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.setDeferredTaxRate(0)"
+    "plan.setHeirsTaxRate(0)"
    ]
   },
   {
