--- a/template.ipynb
+++ b/template.ipynb
@@ -588,7 +588,7 @@
    "source": [
     "To get more information about accounts at the last year of the realization, one can use\n",
     "\n",
-    "    plan.setDeferredTaxRate(30)\n",
+    "    plan.setHeirsTaxRate(30)\n",
     "    plan.estate()\n",
     "    \n",
     "which returns the value of the assets at the last year of the scenario, assuming (in this case) a 30\\% tax burden on the taxable portion of the estate (read tax-deferred savings accounts). The `estate()` function returns two values: the total post-tax value of all savings account in today's dollars and the cumulative inflation rate between today and the last day of the realization. We can also override the value provided by giving an argument. In the case below, a value of %35 would override the value shown above."
