--- a/roth.ipynb
+++ b/roth.ipynb
@@ -50,7 +50,7 @@
     "\n",
     "Comparing the two last equations, it should be clear that if $t_0 = t_n$, then $B_n = B'_n$ due to the commutative property of multiplications.\n",
     "\n",
-    "The common conclusion drawn from this argument is that unless the tax rate today is smaller than the tax rate in the future, i.e., unless $t_0 < t_n$, which would imply that $B'_n > B_n$, then there is no benefit in performing a Roth conversion. This conclusion shifts the conversation towards speculations about future tax rates, some of which having some merit. For example, it is observed that the historical income tax rates in the US are not sustainable given the obligations of the US government, especially regarding an aging population. To support this point, historical data on income tax rates are shown to support the hypothesis that tax rates are likely to increase in the future. The following figure shows how marginal tax rates have decreased during the last 50 years, as a supporting evidence that an increase of income tax are likely in the future.\n",
+    "The common conclusion drawn from this argument is that unless the tax rate today is smaller than the tax rate in the future, i.e., unless $t_0 < t_n$, which would imply that $B'_n > B_n$, then there is no benefit in performing a Roth conversion. It is often argued that the income at retirement will be lower than during active life, and therefore the tax rate will be lower in retirement, provided the tax code stays as it is. However, speculations about future tax rates, some of which having some merit, are then brought up. For example, it is observed that the historical income tax rates in the US are not sustainable given the mandatory spending of the US government, especially regarding an aging population. To support this point, historical data on income tax rates are shown to support the hypothesis that tax rates are likely to increase in the future. The following figure shows how marginal tax rates have decreased during the last 50 years, as a supporting evidence that an increase of income tax are likely in the future.\n",
     "![US historical income tax rate](images/USIncomeTaxMarginalRates.png)\n",
     "\n",
     "So what is wrong with this argument? Nothing. The argument is valid, the assumptions are not. Here are the hidden assumptions:\n",
@@ -58,7 +58,9 @@
     "- The income at retirement is likely to be less than during one's active life, and therefore income taxes during retirement will be lower. **This is not the case if the required minimum distributions (RMDs) are large.** This is particularly true for individuals having large tax-deferred accounts.\n",
     "- The rate of return in a tax-deferred account is the same as the one in a tax-free account. **Not necessarily, in fact they shouldn't be.** For tax and risk management, the distribution of assets in these accounts should definitely not be the same as both withdrawals and investments from and in these accounts should be coordinated. An easy strategy is to keep the high-risk/high-reward assets in the tax-free account, which is likely to be depleted last, and put the less volatile assets in the tax-deferred account. This means that $r$ for the tax-deferred account will definitely not be the same as the one for the tax-free account.\n",
     "\n",
-    "Let's investigate this in more detail by using a few specific examples. We will be using historical data and a heuristic Roth optimizer. Note that this optimizer is not trying to get the maximum income during retirement. Instead, it tries to maximize the estate under the constraint that the desired net income will be matched. Because Clyde and Bonnie have sufficient assets, they believe that they can live comfortably while leaving some money to their heirs. The goal is therefore to maximize the estate, under the assumption that a certain income tax rate will apply when heirs withdraw the money from the tax-deferred account. This rate is not an estate tax, it is an income tax rate on the tax-deferred portion of the estate.   "
+    "ARP Lab is not free of assumptions. Future tax rates are known until 2025. For after 2025, we assume that the tax code of 2017 becomes active after the expiration of the TCJA (expiring in 2025). Income brackets are indexed for inflation, which rate is speculated through the rates selected (e.g., historical, fixed, or statistical) by the user.\n",
+    "\n",
+    "Let's investigate this in more detail by using a few specific examples. We will be using historical data and a heuristic Roth optimizer. Note that this optimizer is not trying to get the maximum income during retirement. Instead, it tries to maximize the estate under the constraint that the desired net income will be matched. Because Clyde and Bonnie have sufficient assets, they believe that they can live comfortably while leaving some money to their heirs. The goal is therefore to maximize the estate, under the assumption that a certain income tax rate will apply when heirs withdraw the money from the tax-deferred account. This rate is not an estate tax, it is an income tax rate on the tax-deferred portion of the estate."
    ]
   },
   {
@@ -296,7 +298,9 @@
    "id": "e0eb8dfd-75c8-4f7b-8bc4-13838e881a23",
    "metadata": {},
    "source": [
-    "Let's first run both cases with no conversion. When reporting estate value, we will assume that there marginal income tax rate to be paid by heirs on the tax-deferred portion of the inheritance is 20%. Note that the estate value is in today's \\\\$."
+    "Let's first run both cases with no conversion. When reporting estate value, we will assume that there marginal income tax rate to be paid by heirs on the tax-deferred portion of the inheritance is 20%.  We will use the variable `heirsTaxRate` to store the 20%, allowing you to change the value at a single place for experimenting with different scenarios.\n",
+    "\n",
+    "Note that the estate value is in today's \\\\$."
    ]
   },
   {
@@ -307,12 +311,13 @@
    "outputs": [],
    "source": [
     "arp.setVerbose(False)\n",
+    "heirsTaxRate = 20\n",
     "\n",
     "plan_fixed.run()\n",
-    "plan_fixed.estate(20)\n",
+    "plan_fixed.estate(heirsTaxRate)\n",
     "\n",
     "plan_hist.run()\n",
-    "plan_hist.estate(20)"
+    "plan_hist.estate(heirsTaxRate)"
    ]
   },
   {
@@ -322,7 +327,7 @@
    "source": [
     "Given the historical sequence of rates, including inflation, the final wealth in today's \\\\$ is about \\\\$5.1M, while it is only \\\\$3.2M when we consider fixed conservative rates. This is to be expected.\n",
     "\n",
-    "Now we try to find a better scenario that would include the (near) best sequence of Roth conversions for each of these cases. For this purpose, we use the `optimizeRoth()` function. The first and second arguments specify the plan to optimize and the tax rate on the tax-deferred portion of the estate. The minimization algorithm must also be given a Roth conversion amount to start considering down to the smallest adjustment to make. These values are specified using the `startConv` and `minConv` values.\n",
+    "Now we try to find a better scenario that would include the (near) best sequence of Roth conversions for each of these cases. For this purpose, we use the `optimizeRoth()` function. The first and second arguments specify the plan to optimize and the tax rate on the tax-deferred portion of the estate. The minimization algorithm must also be given a Roth conversion amount to start considering down to the smallest adjustment to make. These values are specified using the `startConv` and `minConv` values. Note that computer time require to make the calculations will increase as you decrease the value of `minConv`.\n",
     "\n",
     "We will use the `%%time` option of Jupyter to report the computer time to run the case. We will assume a tax rate of 20% to be applied to the tax-deferred portion left in the estate after Clyde and Bonnie have passed. This is done to be able to make meaningful comparisons between end-of-life in the case where portfolios have a mix of tax-deferred and tax-free assets. "
    ]
@@ -335,7 +340,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "plan_fixed2, conversions_fixed = arp.optimizeRoth(plan_fixed, 20, minConv=50, startConv=128000)\n",
+    "plan_fixed2, conversions_fixed = arp.optimizeRoth(plan_fixed, heirsTaxRate, minConv=250, startConv=128000)\n",
     "print(conversions_fixed)"
    ]
   },
@@ -354,7 +359,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan_fixed2.estate(20)"
+    "plan_fixed2.estate(heirsTaxRate)"
    ]
   },
   {
@@ -362,7 +367,7 @@
    "id": "5425b20f-51bd-4e64-9273-2e6451683831",
    "metadata": {},
    "source": [
-    "Let's compare the fixed rate case with and without Roth conversions. Also, notice how the composition of the savings accounts at the end of life is quite different between the two cases. We use strings in the plots to distinguish them from one another. Notice how large are Bonnie's RMDs when no conversions are performed. Also notice that Roth conversions are made during the years when the income of the couple is lower, i.e., between the time when wages are no longer coming in and social security starts."
+    "Let's compare the fixed rate case with and without Roth conversions. Also, notice how the composition of the savings accounts at the end of life is quite different between the two cases. We use strings in the plots to distinguish them from one another. Notice how large are Bonnie's RMDs when no conversions are performed. Also notice that Roth conversions are made during the years when the income of the couple is lower, i.e., between the time when wages stopped coming in and social security starts."
    ]
   },
   {
@@ -403,7 +408,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "plan_hist2, conversions_hist = arp.optimizeRoth(plan_hist, 20, minConv=50, startConv=128000)\n",
+    "plan_hist2, conversions_hist = arp.optimizeRoth(plan_hist, heirsTaxRate, minConv=250, startConv=128000)\n",
     "print(conversions_hist)"
    ]
   },
@@ -422,7 +427,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan_hist2.estate(20)"
+    "plan_hist2.estate(heirsTaxRate)"
    ]
   },
   {
@@ -493,15 +498,17 @@
    "id": "b18551b0-b99b-4129-abc1-9be66a9a881c",
    "metadata": {},
    "source": [
-    "Roth conversions have complex implications and should be considered for reasons beyond those strictly comparing the tax rate now with possible tax rates of the future. Many more questions can be explored:\n",
+    "I hope this example have convinced you that Roth conversions have complex implications and should be considered for reasons beyond those strictly comparing the current tax rate with possible tax rates of the future. The effects of large RMDs, heirs income tax on estate, and market fluctuations need to be considered.\n",
+    "\n",
+    "Many more questions can be explored:\n",
+    "- What is the effect of the tax-deferred tax rate assumed? Does a rate of 30% give the same answer as 20%? How about 60%? At what percentage will optimized scenarios have the tax-deferred accounts all be converted by the time that Clyde and Bonnie have passed?\n",
     "- What is the effect of a *smile* spending profile vs a *flat* spending profile?\n",
-    "- What are the benefits of accounts allocations in this case? What if accounts allocations are not coordinated?\n",
     "- What if both spouses have large tax-deferred assets?\n",
-    "- What is the effect of the tax-deferred tax rate assumed? Does a rate of 30% give the same answer as 20%?\n",
-    "- What happens in years other than 1969? Are the effects as significant?\n",
+    "- What are the benefits of accounts allocations in this case? What if accounts allocations are not coordinated?\n",
+    "- What happens if a different historical starting year other than 1969 is selected? Are the effects as significant?\n",
     "- ...\n",
     "\n",
-    "ARP Lab is designed to tackle these questions. They can be answered by changing only a few parameters in this file. Or in your own case file.\n",
+    "ARP Lab is designed to tackle these questions. They can be answered by changing only a few parameters in this file. Or in your own case file. For running a new case, edit the parameters and click on the double play arrows at the top bar of the notebook (*Restart Kernel and Run All Cells*).\n",
     "\n",
     "Go explore!\n",
     "  "
