--- a/roth.ipynb
+++ b/roth.ipynb
@@ -327,7 +327,7 @@
    "source": [
     "Given the historical sequence of rates, including inflation, the final wealth in today's \\\\$ is about \\\\$5.1M, while it is only \\\\$3.2M when we consider fixed conservative rates. This is to be expected.\n",
     "\n",
-    "Now we try to find a better scenario that would include the (near) best sequence of Roth conversions for each of these cases. For this purpose, we use the `optimizeRoth()` function. The first and second arguments specify the plan to optimize and the tax rate on the tax-deferred portion of the estate. The minimization algorithm must also be given a Roth conversion amount to start considering down to the smallest adjustment to make. These values are specified using the `startConv` and `minConv` values. Note that computer time require to make the calculations will increase as you decrease the value of `minConv`.\n",
+    "Now we try to find a better scenario that would include the (near) best sequence of Roth conversions for each of these cases. For this purpose, we use the `optimizeRoth()` function. The first and second arguments specify the plan to optimize and the tax rate on the tax-deferred portion of the estate. The minimization algorithm must also be given a Roth conversion amount to start considering down to the smallest adjustment to make. These values are specified using the `startConv` and `minConv` values. Note that the computer time required to make the calculations will increase as you decrease the value of `minConv`.\n",
     "\n",
     "We will use the `%%time` option of Jupyter to report the computer time to run the case. We will assume a tax rate of 20% to be applied to the tax-deferred portion left in the estate after Clyde and Bonnie have passed. This is done to be able to make meaningful comparisons between end-of-life in the case where portfolios have a mix of tax-deferred and tax-free assets. "
    ]
@@ -367,7 +367,7 @@
    "id": "5425b20f-51bd-4e64-9273-2e6451683831",
    "metadata": {},
    "source": [
-    "Let's compare the fixed rate case with and without Roth conversions. Also, notice how the composition of the savings accounts at the end of life is quite different between the two cases. We use strings in the plots to distinguish them from one another. Notice how large are Bonnie's RMDs when no conversions are performed. Also notice that Roth conversions are made during the years when the income of the couple is lower, i.e., between the time when wages stopped coming in and social security starts."
+    "Let's compare the fixed-rate case with and without Roth conversions. Notice how the composition of the savings accounts at the end of life is quite different between the two cases. We use identifying strings in the function calls for plots to distinguish the graphs from one another. Also notice how large are Bonnie's RMDs when no conversions are performed and that Roth conversions are made during the years when the income of the couple is lower, i.e., between the time when wages stopped coming in and social security starts."
    ]
   },
   {
@@ -437,7 +437,7 @@
    "source": [
     "Even when assuming a rather low income tax rate of 20% on the tax-deferred account for the heirs, Roth conversions could increase the value by close to \\\\$775k (in today's \\\\$, or strictly speaking in that case, in 1969 \\\\$, which is the first year of retirement).\n",
     "\n",
-    "We can save all withdrawals and events using the `saveInstance()` function. Do help plan.saveInstance() for details."
+    "We can save all withdrawals and events using the `saveInstance()` function. Do `help(arp.Plan.saveInstance)` for details."
    ]
   },
   {
