--- a/roth.ipynb
+++ b/roth.ipynb
@@ -482,7 +482,7 @@
     "\n",
     "When return rates are constant, the proposed Roth conversions will tend to align with a given tax bracket (dashed lines), following common wisdom. The situation here is a combination of both, as it seems advantageous to break the tax bracket line for generating more return in a tax-free account before a swing of market recovery.\n",
     "\n",
-    "Recall that this simulation is using average annual return rates and not daily rates. This has two consequences. The first one is that a knowledge of daily market values could lead to even more gains. But this is only wishful thinking. Second, this simulation assumes that conversions happen at the beginning of the year. A practical implementation would be to design a guard rail system in which a drop in the market beyond a certain percentage value could trigger a Roth conversion of a certain amount optimized over informed assumptions."
+    "Recall that this simulation is using average annual return rates and not daily rates. This has two consequences. The first one is that a knowledge of daily market values could lead to even more gains. But this is only wishful thinking. Second, this simulation assumes that conversions happen at the beginning of the year. A practical implementation would be to design a drawdown method in which a drop in the market beyond a certain percentage value could trigger a Roth conversion of a certain amount optimized over informed assumptions."
    ]
   },
   {
